plugins {
    id 'java'
}

group 'com.romanwuattier'
version '1.0-SNAPSHOT'
sourceCompatibility = '15'
targetCompatibility = 15

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
